# optionedge

./: .env.example  .gitignore  README.md  blueprint.txt  file_structure.txt  instructions.txt  overview.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py
config/: api_endpoints.yaml  settings.schema.json  settings.yaml
docs/: API.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  OPERATIONS.md  PRODUCTION_READINESS_CHECKLIST.md
scripts/: deploy.py  init_project.py  run_tests.py  setup.py  validate_production_readiness.py
src/: __init__.py  main.py
src/application/: __init__.py
src/application/config/: __init__.py  settings.py
src/application/use_cases/: __init__.py  generate_trades.py  scan_market.py
src/data/: __init__.py
src/data/models/: __init__.py  market_data.py  options.py  portfolios.py  trades.py
src/data/repositories/: __init__.py  base.py  market_repo.py  options_repo.py
src/data/validators/: __init__.py  market_validators.py  options_validators.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  option_contract.py  portfolio.py  strategy.py
src/domain/services/: __init__.py  capital_allocator.py  constraint_engine.py  data_quality_service.py  dynamic_constraint_manager.py  dynamic_weight_manager.py  fundamental_data_service.py  market_data_orchestrator.py  options_data_service.py  portfolio_greeks_manager.py  portfolio_risk_controller.py  probability_calculator.py  risk_calculator.py  scoring_engine.py  strategy_generation_service.py  strategy_generator.py  strategy_optimizer.py  technical_analysis_service.py  trade_selector.py
src/domain/value_objects/: __init__.py  greeks.py  trade_metrics.py
src/infrastructure/: __init__.py
src/infrastructure/api/: __init__.py  base_client.py  fred_client.py  quiver_client.py  tradier_client.py  yahoo_client.py
src/infrastructure/continuous_improvement/: __init__.py  feedback_system.py
src/infrastructure/error_handling/: __init__.py  error_handler.py  exceptions.py  recovery_system.py
src/infrastructure/monitoring/: __init__.py  logger.py  metrics.py
src/infrastructure/quality_assurance/: __init__.py  qa_pipeline.py
src/presentation/: __init__.py
src/presentation/cli/: __init__.py  main.py
src/presentation/formatters/: __init__.py  console_formatter.py  table_formatter.py  trade_formatter.py
src/presentation/validation/: output_validator.py
tests/: __init__.py  conftest.py
tests/backtesting/: __init__.py  historical_backtesting_framework.py
tests/end_to_end/: __init__.py  test_complete_workflow.py
tests/integration/: __init__.py  test_end_to_end_flow.py
tests/integration/test_api_integration/: __init__.py
tests/stress_testing/: __init__.py  stress_test_scenarios.py
tests/unit/: __init__.py  test_api_integration.py  test_constraint_validation.py  test_mathematical_validation.py
tests/unit/test_api/: __init__.py
tests/unit/test_models/: __init__.py  test_options.py
tests/unit/test_services/: __init__.py
